# datathon-sunass

./: main.ipynb  main.py  pyproject.toml  solucion_piura_SNO08.ipynb
datasets/: 01_BASE_CAUDALES_SECTORES_PIURA.xlsx  02_ROTURAS_RED_PRIMARIA_SECUNDARIA_PIURA.xlsx  03_REDES_CONEXIONES_PIURA.xlsx
